Global Exception Handler Middleware Created
Global exception handler middleware created.

--- a/CONBook.API/appsettings.Development.json
+++ b/CONBook.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CONBookDB": "your connectionstring"
+    "CONBookDB": "Data Source=DESKTOP-SJO4L2P\\SQLEXPRESS;Initial Catalog=CONBookDB;Integrated Security=True"
   },
   "Version": "1.0.0",
   "Logging": {
